# base-qt5-game

./: CMakeLists.txt  Game.cpp  Game.h  MainWindow.cpp  MainWindow.h  README.md  main.cpp  readme.txt
